# NLP_group_9

./: README.md
NLP/: pyproject.toml
NLP/nlp/: A2.ipynb  BERTopic.ipynb  Mazmodel.ipynb  lda_analysis.py  preprocessing_functions.py  preprocessing_functions_lda.py  preprocessing_lda.ipynb  run_lda_analysis.py
NLP/nlp/lda_model/: preprocessing_lda.ipynb  run_lda_analysis.py
NLP/nlp/results/intertopic_distance_map/: it1.html  it2.html  it2_2.html  it3.html  it3_2.html  it4.html  it5.html  it5_2.html
NLP/nlp/results/topic_vs_coherence_data/: it2.csv  it3.csv  it3_2.csv  it4.csv  it5_3.csv
NLP/nlp/results/topic_word_weights_data/: it2.csv  it4.csv  it5.csv
NLP/nlp/results_lda/intertopic_distance_map/: it1.html  it5_3.html
NLP/nlp/results_lda/topic_vs_coherence_data/: it1.csv  it5.csv  it5_2.csv
NLP/nlp/results_lda/topic_word_weights_data/: it1.csv  it3.csv  it3_2.csv  it5_3.csv
