[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Floor99 <floorhalkes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
nltk = "^3.9.1"
spacy = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
