[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Floor99 <floorhalkes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.3"
nltk = "^3.9.1"
pyarrow = "^17.0.0"
gensim = "^4.3.3"
numpy = "1.26.4"
spacy = "3.7.0"
fuzzytm = "^2.0.9"
matplotlib = "^3.9.2"
wordcloud = "^1.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
