[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Floor99 <floorhalkes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gensim = "^4.3.3"
scikit-learn = "^1.5.2"
numpy = "1.26.4"
pandas = "^2.2.3"
nltk = "^3.9.1"
pyarrow = "^17.0.0"
wordcloud = "^1.9.3"
pyldavis = "^3.4.1"
bertopic = "^0.16.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
